# MorphoNAS-playbook

./: .gitignore  README.md  pyproject.toml
morphonas_playbook/: __init__.py  _draw.py  assets.py  control.py  core.py  evolve.py  growth.py
morphonas_playbook/assets/: part3_elite.json  part3_trajectory.json  part4_elite.json  part4_trajectory.json
morphonas_playbook/engine/: PINNED_COMMIT.txt  cma_optimizer.py  convergence_strategies.py  experiment_runner.py  fitness_functions.py  genetic_algorithm.py  genome.py  genome_strategies.py  grid.py  main.py  morphogen_display.py  neural_propagation.py  neuron_graph_display.py  optimizer.py  selection_strategies.py
notebooks/: edit-the-source.ipynb  sifr-2026-genomic-bottleneck.ipynb
