[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "morphonas-playbook"
version = "0.1.3"
description = "Hands-on tutorials for morphogenetic neural architecture search (MorphoNAS)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "gymnasium[classic-control]",
  "networkx",
  "matplotlib",
  "scipy",
  "pillow",
]

[project.urls]
Homepage = "https://github.com/ukma-morphonas-lab/MorphoNAS-playbook"

[tool.setuptools.packages.find]
include = ["morphonas_playbook*"]

[tool.setuptools.package-data]
morphonas_playbook = ["engine/*.py", "engine/*.txt", "assets/*.json"]
